--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
-body {
+body a {
     margin: 0;
     font-family: Arial, sans-serif;
     background-color: #f5f7fa;
+    text-decoration: none;
   }
   
   .sidebar {
@@ -156,7 +157,9 @@ body {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     text-align: center;
   }
-  
+  a {
+    text-decoration: none; /* Remove o sublinhado dos links */
+  }
   .content .shortcuts .shortcut-card i {
     font-size: 24px;
     color: #ff9800;
